--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.14.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "react-bootstrap": "^0.30.7",
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
